...

		const renderItem = ({ item }: { item: IActionSheetItem['item'] }) => <Item item={item} hide={hide} />;

		if (options) {
			return (
				<FlatList
					testID='action-sheet'
					data={options}
					refreshing={false}
					keyExtractor={item => item.title}
					bounces={false}
					renderItem={renderItem}
					style={{ backgroundColor: colors.strokeExtraDark }}
...
